@@ -27,13 +27,15 @@
 
 package com.mewna.catnip.rest.handler;
 
-import com.google.common.collect.ImmutableMap;
 import com.mewna.catnip.entity.misc.Emoji.CustomEmoji;
 import com.mewna.catnip.internal.CatnipImpl;
 import com.mewna.catnip.rest.ResponsePayload;
 import com.mewna.catnip.rest.Routes;
 import com.mewna.catnip.rest.requester.Requester.OutboundRequest;
 import com.mewna.catnip.util.Utils;
+import io.reactivex.Completable;
+import io.reactivex.Observable;
+import io.reactivex.Single;
 import io.vertx.core.json.JsonArray;
 import io.vertx.core.json.JsonObject;
 
@@ -41,9 +43,7 @@ import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import java.net.URI;
 import java.util.Collection;
-import java.util.Collections;
-import java.util.List;
-import java.util.concurrent.CompletionStage;
+import java.util.Map;
 
 import static com.mewna.catnip.util.JsonUtil.mapObjectContents;
 
@@ -58,57 +58,58 @@ public class RestEmoji extends RestHandler {
     }
     
     @Nonnull
-    public CompletionStage<List<CustomEmoji>> listGuildEmojis(@Nonnull final String guildId) {
+    public Observable<CustomEmoji> listGuildEmojis(@Nonnull final String guildId) {
         return listGuildEmojisRaw(guildId)
-                .thenApply(mapObjectContents(e -> entityBuilder().createCustomEmoji(guildId, e)))
-                .thenApply(Collections::unmodifiableList);
+                .map(f -> mapObjectContents(e -> entityBuilder().createCustomEmoji(guildId, e)).apply(f))
+                .flatMapIterable(e -> e);
     }
     
     @Nonnull
-    public CompletionStage<JsonArray> listGuildEmojisRaw(@Nonnull final String guildId) {
+    public Observable<JsonArray> listGuildEmojisRaw(@Nonnull final String guildId) {
         return catnip().requester().queue(
                 new OutboundRequest(
                         Routes.LIST_GUILD_EMOJIS.withMajorParam(guildId),
-                        ImmutableMap.of()))
-                .thenApply(ResponsePayload::array);
+                        Map.of()))
+                .map(ResponsePayload::array);
     }
     
     @Nonnull
-    public CompletionStage<CustomEmoji> getGuildEmoji(@Nonnull final String guildId, @Nonnull final String emojiId) {
-        return getGuildEmojiRaw(guildId, emojiId).thenApply(e -> entityBuilder().createCustomEmoji(guildId, e));
+    public Single<CustomEmoji> getGuildEmoji(@Nonnull final String guildId, @Nonnull final String emojiId) {
+        return Single.fromObservable(getGuildEmojiRaw(guildId, emojiId)
+                .map(e -> entityBuilder().createCustomEmoji(guildId, e)));
     }
     
     @Nonnull
-    public CompletionStage<JsonObject> getGuildEmojiRaw(@Nonnull final String guildId, @Nonnull final String emojiId) {
+    public Observable<JsonObject> getGuildEmojiRaw(@Nonnull final String guildId, @Nonnull final String emojiId) {
         return catnip().requester().queue(
                 new OutboundRequest(
                         Routes.GET_GUILD_EMOJI.withMajorParam(guildId),
-                        ImmutableMap.of("emojis.id", emojiId)))
-                .thenApply(ResponsePayload::object);
+                        Map.of("emojis.id", emojiId)))
+                .map(ResponsePayload::object);
     }
     
     @Nonnull
-    public CompletionStage<CustomEmoji> createGuildEmoji(@Nonnull final String guildId, @Nonnull final String name,
-                                                         @Nonnull final URI imageData,
-                                                         @Nonnull final Collection<String> roles,
-                                                         @Nullable final String reason) {
-        return createGuildEmojiRaw(guildId, name, imageData, roles, reason)
-                .thenApply(e -> entityBuilder().createEmoji(guildId, e))
-                .thenApply(CustomEmoji.class::cast);
+    public Single<CustomEmoji> createGuildEmoji(@Nonnull final String guildId, @Nonnull final String name,
+                                                @Nonnull final URI imageData,
+                                                @Nonnull final Collection<String> roles,
+                                                @Nullable final String reason) {
+        return Single.fromObservable(createGuildEmojiRaw(guildId, name, imageData, roles, reason)
+                .map(e -> entityBuilder().createEmoji(guildId, e))
+                .map(CustomEmoji.class::cast));
     }
     
     @Nonnull
-    public CompletionStage<CustomEmoji> createGuildEmoji(@Nonnull final String guildId, @Nonnull final String name,
-                                                         @Nonnull final URI imageData,
-                                                         @Nonnull final Collection<String> roles) {
+    public Single<CustomEmoji> createGuildEmoji(@Nonnull final String guildId, @Nonnull final String name,
+                                                @Nonnull final URI imageData,
+                                                @Nonnull final Collection<String> roles) {
         return createGuildEmoji(guildId, name, imageData, roles, null);
     }
     
     @Nonnull
-    public CompletionStage<JsonObject> createGuildEmojiRaw(@Nonnull final String guildId, @Nonnull final String name,
-                                                           @Nonnull final URI imageData,
-                                                           @Nonnull final Collection<String> roles,
-                                                           @Nullable final String reason) {
+    public Observable<JsonObject> createGuildEmojiRaw(@Nonnull final String guildId, @Nonnull final String name,
+                                                      @Nonnull final URI imageData,
+                                                      @Nonnull final Collection<String> roles,
+                                                      @Nullable final String reason) {
         Utils.validateImageUri(imageData);
         final JsonArray rolesArray;
         if(roles.isEmpty()) {
@@ -120,54 +121,54 @@ public class RestEmoji extends RestHandler {
         return catnip().requester().queue(
                 new OutboundRequest(
                         Routes.CREATE_GUILD_EMOJI.withMajorParam(guildId),
-                        ImmutableMap.of(),
+                        Map.of(),
                         new JsonObject()
                                 .put("name", name)
                                 .put("image", imageData.toString())
                                 .put("roles", rolesArray),
                         reason
                 ))
-                .thenApply(ResponsePayload::object);
+                .map(ResponsePayload::object);
     }
     
     @Nonnull
-    public CompletionStage<CustomEmoji> createGuildEmoji(@Nonnull final String guildId, @Nonnull final String name,
-                                                         @Nonnull final byte[] image,
-                                                         @Nonnull final Collection<String> roles) {
+    public Single<CustomEmoji> createGuildEmoji(@Nonnull final String guildId, @Nonnull final String name,
+                                                @Nonnull final byte[] image,
+                                                @Nonnull final Collection<String> roles) {
         return createGuildEmoji(guildId, name, Utils.asImageDataUri(image), roles);
     }
     
     @Nonnull
-    public CompletionStage<CustomEmoji> createGuildEmoji(@Nonnull final String guildId, @Nonnull final String name,
-                                                         @Nonnull final byte[] image,
-                                                         @Nonnull final Collection<String> roles,
-                                                         @Nullable final String reason) {
+    public Single<CustomEmoji> createGuildEmoji(@Nonnull final String guildId, @Nonnull final String name,
+                                                @Nonnull final byte[] image,
+                                                @Nonnull final Collection<String> roles,
+                                                @Nullable final String reason) {
         return createGuildEmoji(guildId, name, Utils.asImageDataUri(image), roles, reason);
     }
     
     @Nonnull
-    public CompletionStage<CustomEmoji> modifyGuildEmoji(@Nonnull final String guildId, @Nonnull final String emojiId,
-                                                         @Nonnull final String name,
-                                                         @Nonnull final Collection<String> roles,
-                                                         @Nullable final String reason) {
-        return modifyGuildEmojiRaw(guildId, emojiId, name, roles, reason)
-                .thenApply(e -> entityBuilder().createEmoji(guildId, e))
-                .thenApply(CustomEmoji.class::cast);
+    public Single<CustomEmoji> modifyGuildEmoji(@Nonnull final String guildId, @Nonnull final String emojiId,
+                                                @Nonnull final String name,
+                                                @Nonnull final Collection<String> roles,
+                                                @Nullable final String reason) {
+        return Single.fromObservable(modifyGuildEmojiRaw(guildId, emojiId, name, roles, reason)
+                .map(e -> entityBuilder().createEmoji(guildId, e))
+                .map(CustomEmoji.class::cast));
     }
     
     @Nonnull
-    public CompletionStage<CustomEmoji> modifyGuildEmoji(@Nonnull final String guildId, @Nonnull final String emojiId,
-                                                         @Nonnull final String name,
-                                                         @Nonnull final Collection<String> roles) {
+    public Single<CustomEmoji> modifyGuildEmoji(@Nonnull final String guildId, @Nonnull final String emojiId,
+                                                @Nonnull final String name,
+                                                @Nonnull final Collection<String> roles) {
         return modifyGuildEmoji(guildId, emojiId, name, roles, null);
     }
     
     @Nonnull
-    public CompletionStage<JsonObject> modifyGuildEmojiRaw(@Nonnull final String guildId, @Nonnull final String emojiId,
-                                                           @Nonnull final String name,
-                                                           @Nonnull final Collection<String> roles,
-                                                           @Nullable final String reason
-                                                           ) {
+    public Observable<JsonObject> modifyGuildEmojiRaw(@Nonnull final String guildId, @Nonnull final String emojiId,
+                                                      @Nonnull final String name,
+                                                      @Nonnull final Collection<String> roles,
+                                                      @Nullable final String reason
+    ) {
         final JsonArray rolesArray;
         if(roles.isEmpty()) {
             rolesArray = null;
@@ -178,27 +179,26 @@ public class RestEmoji extends RestHandler {
         return catnip().requester().queue(
                 new OutboundRequest(
                         Routes.MODIFY_GUILD_EMOJI.withMajorParam(guildId),
-                        ImmutableMap.of("emojis.id", emojiId),
+                        Map.of("emojis.id", emojiId),
                         new JsonObject()
                                 .put("name", name)
                                 .put("roles", rolesArray),
                         reason
                 ))
-                .thenApply(ResponsePayload::object);
+                .map(ResponsePayload::object);
     }
     
     @Nonnull
-    public CompletionStage<Void> deleteGuildEmoji(@Nonnull final String guildId, @Nonnull final String emojiId,
-                                                  @Nullable final String reason) {
-        return catnip().requester().queue(
+    public Completable deleteGuildEmoji(@Nonnull final String guildId, @Nonnull final String emojiId,
+                                        @Nullable final String reason) {
+        return Completable.fromObservable(catnip().requester().queue(
                 new OutboundRequest(
                         Routes.DELETE_GUILD_EMOJI.withMajorParam(guildId),
-                        ImmutableMap.of("emojis.id", emojiId)).reason(reason))
-                .thenApply(__ -> null);
+                        Map.of("emojis.id", emojiId)).reason(reason)));
     }
     
     @Nonnull
-    public CompletionStage<Void> deleteGuildEmoji(@Nonnull final String guildId, @Nonnull final String emojiId) {
+    public Completable deleteGuildEmoji(@Nonnull final String guildId, @Nonnull final String emojiId) {
         return deleteGuildEmoji(guildId, emojiId, null);
     }
 }
